--- a/Open Day Dialogue Compiler/Open Day Dialogue Compiler.csproj
+++ b/Open Day Dialogue Compiler/Open Day Dialogue Compiler.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Parser.cs" />
     <Compile Include="Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TranslationManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
