Greatly improved error handling, more comments in the code, and bug fixes.

--- a/Open Day Dialogue Compiler/Open Day Dialogue Compiler.csproj
+++ b/Open Day Dialogue Compiler/Open Day Dialogue Compiler.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="BytecodeWriter.cs" />
     <Compile Include="Compiler.cs" />
+    <Compile Include="Errors.cs" />
     <Compile Include="Functions.cs" />
     <Compile Include="Lexer.cs" />
     <Compile Include="Parser.cs" />
